@@ -13,4 +13,4 @@ WORKDIR /app
 
 COPY build/libs/nightmonkeys-demo-0.0.1-SNAPSHOT.jar app.jar
 
-ENTRYPOINT ["sh", "-c", "java -Djava.library.path=/usr/lib --enable-native-access=ALL-UNNAMED --enable-preview $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "java -Djava.library.path=/usr/lib --enable-native-access=ALL-UNNAMED -jar app.jar"]
